--- a/package.json
+++ b/package.json
@@ -3,35 +3,39 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "postinstall": "ng build --prod",
+    "deploy:firebase": "ng build --prod && firebase deploy",
     "deploy:gh": "ng build --prod --base-href='https://Ghassen-Kh.github.io/ManageApp/' && sudo ngh"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.9",
+    "@angular/cli": "~11.2.8",
     "@angular/common": "~11.2.9",
     "@angular/compiler": "~11.2.9",
+    "@angular/compiler-cli": "~11.2.9",
     "@angular/core": "~11.2.9",
     "@angular/forms": "~11.2.9",
     "@angular/platform-browser": "~11.2.9",
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.8",
-    "@angular/cli": "~11.2.8",
-    "@angular/compiler-cli": "~11.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -44,7 +48,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "tslint": "~6.1.0"
   }
 }
