--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
+  },
+  "engines":{
+    "node":"6.10.3",
+    "npm":"5.3.0"
   }
 }
